# Elden_ring_counter_rust

./: .gitignore  Cargo.toml  storage.json
.github/workflows/: rust.yml
src/: main.rs
src/hotkey/: linux_wayland.rs  mod.rs  windows.rs
src/i18n/: language.rs  mod.rs  translations.rs
src/ocr/: ocr.rs
src/screens/: add_recorder_screen.rs  main_screen.rs  mod.rs  ocr.rs  settings_screen.rs
src/screens/components/: list.rs  mod.rs  ocr.rs
src/structs/: app.rs  mod.rs  recorder.rs  storage.rs
src/structs/settings/: crop_position.rs  game.rs  language.rs  mod.rs  screen.rs  settings.rs
src/style/: style.rs
src/utils/: app_worker.rs  image_processing.rs  mod.rs  screen_capture.rs
