[package]
name = "Elden_ring_compteur"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["tokio"] }
iced_core = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
thread = "0.0.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }


[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
windows-core = "0.62.2"


[features]
wayland=[]
