[package]
name = "Elden_ring_compteur"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
directories = "6.0.0"
iced = { version = "0.14.0", features = ["tokio"] }
iced_aw = { version = "0.13.0", features = ["card", "full"] }
iced_core = "0.14.0"
image = "0.25.9"
imageproc = "0.26.0"
rayon = "1.11.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
scrap = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
strsim = "0.11.1"
thread = "0.0.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync"] }
uni-ocr = "0.1.5"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
xcap = "0.8.1"


[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
windows-core = "0.62.2"


[features]
wayland=[]
timing=[]
debug=[]
no_save=[]
